--- a/src/stylesheets/_layout.scss
+++ b/src/stylesheets/_layout.scss
@@ -67,6 +67,10 @@ main {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+
+     &.fullscreen {
+       max-width: 100%;
+     }
   }
 }
 
