--- a/src/routes/home/index.module.scss
+++ b/src/routes/home/index.module.scss
@@ -111,7 +111,7 @@
   }
 
 
-  section > p::first-letter{
+  section > p:first-of-type::first-letter{
       initial-letter: 2;
       margin-right: 0.5rem;
     }
