feat: add text format tabs to Report route

--- a/src/components/others/formCreate/index.module.scss
+++ b/src/components/others/formCreate/index.module.scss
@@ -12,6 +12,11 @@
   }
 }
 
+.errorMessage {
+  @include errorMessageMixin;
+  position: relative;
+}
+
 .h1 {
   h1 {
     margin-bottom: 0px;
@@ -50,7 +55,7 @@
 
 .title {
   width: 100%;
-  margin-bottom: spacings.$s-8;
+  margin-bottom: spacings.$s-7;
 }
 
 .description {
@@ -58,8 +63,7 @@
 }
 .textFormat {
   width: 100%;
-  margin-bottom: spacings.$s-8;
-
+  margin-bottom: spacings.$s-6;
 }
 
 .tags {
