--- a/src/routes/home/index.module.scss
+++ b/src/routes/home/index.module.scss
@@ -123,6 +123,68 @@ $gappedBorders: linear-gradient(
 
 // Styling
 .home {
+  @keyframes shake {
+    0%,
+    100% {
+      transform: translateX(0);
+    }
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+      transform: translateX(-10px);
+    }
+    20%,
+    40%,
+    60%,
+    80% {
+      transform: translateX(10px);
+    }
+  }
+  @keyframes swing {
+    20% {
+      transform: rotate(15deg);
+    }
+    40% {
+      transform: rotate(-10deg);
+    }
+    60% {
+      transform: rotate(5deg);
+    }
+    80% {
+      transform: rotate(-5deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
+  }
+  @keyframes rotate-in-down-left {
+    0% {
+      transform-origin: left bottom;
+      transform: rotate(-90deg);
+      opacity: 0;
+    }
+    100% {
+      transform-origin: left bottom;
+      transform: rotate(0);
+      opacity: 1;
+    }
+  }
+  @keyframes bounce-out-down {
+    0% {
+      transform: translateY(0);
+    }
+    20% {
+      opacity: 1;
+      transform: translateY(-20px);
+    }
+    100% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+  }
+
   word-break: break-word;
 
   .logo {
@@ -150,8 +212,8 @@ $gappedBorders: linear-gradient(
   section.principles {
     text-align: center;
     display: grid;
-    grid-gap: 16 * spacings.$spacing;
     grid-template-columns: 1fr;
+    grid-gap: 16 * spacings.$spacing;
 
     img {
       width: 4.5rem;
@@ -159,17 +221,45 @@ $gappedBorders: linear-gradient(
 
     @media (min-width: breakpoints.$md) {
       grid-template-columns: 1fr 1fr;
-
+      grid-gap: 0;
+      & > div {
+        padding: 12 * spacings.$spacing 18 * spacings.$spacing;
+      }
       & > div:first-of-type {
         grid-column: span 2;
       }
-    }
+      & > div:nth-of-type(odd) {
+        background: linear-gradient(to right, transparent 10%, black 10%, black 90%, transparent 90%) 0 0,
+          linear-gradient(to bottom, transparent 20%, black 20%, black 80%, transparent 80%) 100% 0;
+        background-repeat: no-repeat;
+        background-size: 100% 1px, 1px 100%;
+      }
 
-    & > div:not(:first-of-type) {
-    }
-    & > div:not(:first-of-type):nth-of-type(2n) {
-    }
-    & > div:not(:first-of-type):nth-of-type(2n + 1) {
+      & > div:nth-of-type(1),
+      & > div:nth-of-type(even) {
+        background: linear-gradient(to right, transparent 10%, black 10%, black 90%, transparent 90%) 0 0,
+          linear-gradient(to bottom, transparent 20%, black 20%, black 80%, transparent 80%) 100% 0,
+          linear-gradient(to bottom, transparent 20%, black 20%, black 80%, transparent 80%) 0 0;
+        background-repeat: no-repeat;
+        background-size: 100% 1px, 1px 100%, 1px 100%;
+      }
+
+      & > div:nth-last-child(2) {
+        background: linear-gradient(to right, transparent 10%, black 10%, black 90%, transparent 90%) 0 100%,
+          linear-gradient(to right, transparent 10%, black 10%, black 90%, transparent 90%) 0 0,
+          linear-gradient(to bottom, transparent 20%, black 20%, black 80%, transparent 80%) 100% 0,
+          linear-gradient(to bottom, transparent 20%, black 20%, black 80%, transparent 80%) 0 0;
+        background-repeat: no-repeat;
+        background-size: 100% 1px, 100% 1px, 1px 100%, 1px 100%;
+      }
+
+      & > div:last-child {
+        background: linear-gradient(to right, transparent 10%, black 10%, black 90%, transparent 90%) 0 100%,
+          linear-gradient(to right, transparent 10%, black 10%, black 90%, transparent 90%) 0 0,
+          linear-gradient(to bottom, transparent 20%, black 20%, black 80%, transparent 80%) 100% 0;
+        background-repeat: no-repeat;
+        background-size: 100% 1px, 100% 1px, 1px 100%;
+      }
     }
   }
 
