refactor: smaller logo

--- a/src/routes/home/index.module.scss
+++ b/src/routes/home/index.module.scss
@@ -34,13 +34,13 @@ $gappedBorders: linear-gradient(
 //translateY(calc(-12vh + 1rem))
 @keyframes eyeAnimation {
   10% {
-    transform: translateX(-40%)  rotate(20deg)  scale(1.2);
+    transform: translateX(-40%) rotate(20deg) scale(1.2);
   }
   20% {
-    transform: translateX(-50%)  rotate(-20deg)  scale(1.2);
+    transform: translateX(-50%) rotate(-20deg) scale(1.2);
   }
   30% {
-    transform: translateX(-40%)  translateY(-8dvh) rotate(20deg)  scale(1.4);
+    transform: translateX(-40%) translateY(-8dvh) rotate(20deg) scale(1.4);
   }
   40% {
     transform: translateX(-50%) rotate(-20deg) scale(1.2);
@@ -71,8 +71,6 @@ $gappedBorders: linear-gradient(
     figure {
       margin-left: auto;
       margin-right: auto;
-      margin-bottom: spacings.$s-8;
-      margin-top: spacings.$s-8;
     }
   }
 
@@ -82,16 +80,16 @@ $gappedBorders: linear-gradient(
   }
 
   @media (min-width: breakpoints.$md) {
-    section.twoColumn,
-    section.threeColumn {
+    div.twoColumn,
+    div.threeColumn {
       column-gap: 2rem;
       text-align: justify;
     }
-    section.twoColumn {
+    div.twoColumn {
       column-count: 2;
     }
 
-    section.threeColumn {
+    div.threeColumn {
       column-count: 2;
     }
 
@@ -102,6 +100,9 @@ $gappedBorders: linear-gradient(
 
       h1 {
         flex: 1;
+        margin-block-start: 0;
+        margin-right: spacings.$s-8;
+        margin-top: -0.6rem;
       }
 
       p {
@@ -133,11 +134,11 @@ $gappedBorders: linear-gradient(
   }
 
   @media (min-width: breakpoints.$xl) {
-    section.twoColumn {
+    div.twoColumn {
       column-count: 2;
     }
 
-    section.threeColumn {
+    div.threeColumn {
       column-count: 3;
     }
 
@@ -152,23 +153,40 @@ $gappedBorders: linear-gradient(
 // Styling
 .home {
   word-break: break-word;
-
+  p:global(.initialize)::first-letter {
+    initial-letter: 2;
+    margin-right: 0.5rem;
+  }
   .logo {
-    height: calc(100dvh - 5rem);
+    height: calc(70dvh - 5rem);
     width: 100%;
     margin-bottom: 2.23rem;
     padding: 8dvh;
   }
 
-  section {
+  div.twoColumn {
+    margin-bottom: 20 * spacings.$spacing;
+  }
+
+  div.threeColumn {
+    margin-top: 7 * spacings.$spacing;
+    margin-bottom: 32 * spacings.$spacing;
+  }
+
+  div.threeColumn + em {
+    display: block;
+    text-align: center;
+  }
+
+  & > section {
     padding-top: 20 * spacings.$spacing;
     padding-bottom: 20 * spacings.$spacing;
 
     &:first-of-type {
       padding-top: 20 * spacings.$spacing;
+      padding-bottom: 10 * spacings.$spacing;
     }
 
-    &.twoColumn,
     &.rightFloating,
     &.twoColumnsMerging,
     &:has(> figure) {
@@ -337,14 +355,13 @@ $gappedBorders: linear-gradient(
         }
       }
     }
-    & > p:first-of-type::first-letter {
-      initial-letter: 2;
-      margin-right: 0.5rem;
-    }
+
     &.leftFloating,
     &.rightFloating {
       figure {
         max-width: 50%;
+        margin-bottom: spacings.$s-4;
+        margin-top: spacings.$s-8;
       }
       p {
         text-align: justify;
