--- a/src/stylesheets/_theme.scss
+++ b/src/stylesheets/_theme.scss
@@ -104,8 +104,8 @@
   --background: 38, 58%, 96%;
 }
 
-
-body, .withBackground{
+body,
+.withBackground {
   background-color: hsl(var(--background));
   position: relative;
 }
@@ -124,6 +124,16 @@ body, .withBackground{
 //  position: absolute;
 //  z-index: -9;
 //}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  color: hsl(var(--dark-orchestra-600));
+}
 
 footer {
   h1,
@@ -183,7 +193,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px hsl(var(--english-breakfast-600), 0.3)
+  box-shadow: inset 0 0 6px hsl(var(--english-breakfast-600), 0.3);
 }
 
 body::-webkit-scrollbar-thumb {
