--- a/src/routes/home/index.module.scss
+++ b/src/routes/home/index.module.scss
@@ -31,7 +31,6 @@ $gappedBorders: linear-gradient(
     0 0,
   linear-gradient(to bottom, transparent 10%, black 10%, black 90%, transparent 90%) 100% 0,
   linear-gradient(to bottom, transparent 10%, black 10%, black 90%, transparent 90%) 0 0;
-//translateY(calc(-12vh + 1rem))
 @keyframes eyeAnimation {
   10% {
     transform: translateX(-40%) rotate(20deg) scale(1.2);
@@ -402,8 +401,8 @@ $gappedBorders: linear-gradient(
       top: calc(-1 * $iconSize/2);
       left: 50%;
       transform: translateX(-50%);
-      animation: eyeAnimation 5s normal 2;
-      transform-origin: center;
+      //animation: eyeAnimation 5s normal 2;
+      //transform-origin: center;
     }
 
     &::after {
