--- a/src/routes/home/index.module.scss
+++ b/src/routes/home/index.module.scss
@@ -162,7 +162,7 @@ $gappedBorders: linear-gradient(
 // Styling
 .home {
   word-break: break-word;
-  p:global(.initialize)::first-letter {
+  p:global(.has-dropped-letter)::first-letter {
     float: left;
     font-size: 4rem;
     line-height: 0.5;
