--- a/src/routes/home/index.module.scss
+++ b/src/routes/home/index.module.scss
@@ -230,29 +230,38 @@ $gappedBorders: linear-gradient(
 
     &.principles {
       text-align: center;
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-gap: 16 * spacings.$spacing;
+      &>div{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 16 * spacings.$spacing;
+      }
+
+      h1{
+        margin-bottom: 30*spacings.$spacing;
+      }
 
       img {
         width: 4.5rem;
       }
 
       @media (min-width: breakpoints.$md) {
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 0;
-        & > div {
+        & > div{
+          grid-template-columns: 1fr 1fr;
+          grid-gap: 0;
+        }
+
+        & > div>div {
           padding: 12 * spacings.$spacing 18 * spacings.$spacing;
         }
 
-        & > div:nth-of-type(odd) {
+        & > div>div:nth-of-type(odd) {
           background: linear-gradient(to right, transparent 10%, black 10%, black 90%, transparent 90%) 0 0,
             linear-gradient(to bottom, transparent 20%, black 20%, black 80%, transparent 80%) 100% 0;
           background-repeat: no-repeat;
           background-size: 100% 1px, 1px 100%;
         }
 
-        & > div:nth-of-type(odd):not(:first-of-type) {
+        & > div>div:nth-of-type(odd):not(:first-of-type) {
           position: relative;
 
           &::before,
@@ -278,7 +287,7 @@ $gappedBorders: linear-gradient(
           }
         }
 
-        & > div:nth-of-type(even) {
+        & > div>div:nth-of-type(even) {
           background: linear-gradient(to right, transparent 10%, black 10%, black 90%, transparent 90%) 0 0,
             linear-gradient(to bottom, transparent 20%, black 20%, black 80%, transparent 80%) 100% 0,
             linear-gradient(to bottom, transparent 20%, black 20%, black 80%, transparent 80%) 0 0;
@@ -286,7 +295,7 @@ $gappedBorders: linear-gradient(
           background-size: 100% 1px, 1px 100%, 1px 100%;
         }
 
-        & > div:nth-last-child(2) {
+        & >div> div:nth-last-child(2) {
           background: linear-gradient(to right, transparent 10%, black 10%, black 90%, transparent 90%) 0 100%,
             linear-gradient(to right, transparent 10%, black 10%, black 90%, transparent 90%) 0 0,
             linear-gradient(to bottom, transparent 20%, black 20%, black 80%, transparent 80%) 100% 0,
@@ -295,7 +304,7 @@ $gappedBorders: linear-gradient(
           background-size: 100% 1px, 100% 1px, 1px 100%, 1px 100%;
         }
 
-        & > div:last-child {
+        & >div> div:last-child {
           background: linear-gradient(to right, transparent 10%, black 10%, black 90%, transparent 90%) 0 100%,
             linear-gradient(to right, transparent 10%, black 10%, black 90%, transparent 90%) 0 0,
             linear-gradient(to bottom, transparent 20%, black 20%, black 80%, transparent 80%) 100% 0; /* right border */
@@ -303,7 +312,7 @@ $gappedBorders: linear-gradient(
           background-size: 100% 1px, 100% 1px, 1px 100%;
         }
 
-        & > div:first-of-type {
+        & >div> div:first-of-type {
           grid-column: span 2;
           position: relative;
 
